# ReadX

./: .gitignore  QC_pipeline.nf  README.md  app.py  nextflow.config
flask-app/: in.txt
flask-app/templates/: Gemini-app.py  Login_form.html  Registration form.html  data directory.html  first_page.html  index.html  second_page copy.html
modules/: assembly_stats.nf  reads_stats.nf
seqsure/: pyproject.toml  run.py
seqsure/app/: __init__.py  forms.py  models.py  pipeline_handler.py  routes.py
seqsure/app/static/: data.js  seqsure.js
seqsure/app/templates/: base.html  dashboard.html  data.html  home.html  index.html  login.html  notificaitons.html  readx.html  register.html  seqsure.html
seqsure/templates/: base.html  index.html
