[project]
name = "seqsure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "requests>=2.32.3",
    "flask-bootstrap>=3.3.7.1",
    "flask-migrate>=4.0.7",
]
